# BoardCanvas

./: .gitignore  BUGFIX_TRACKER.md  BUG_ANALYSIS.md  DIAGNOSTICS_GUIDE.md  DOCS_INDEX.md  MODULES.md  NAVIGATION.md  NAVIGATION_QUICK.md  QUICKREF.md  README.md  TODO.md  app.js  index.html  package-lock.json  package.json  styles.css
.github/workflows/: desktop-build.yml  pages-deploy.yml
js/: diagnostics.js  events-init.js  globals.js  init.js  overlay.js  presets-strokes.js  presets-ui.js  presets-utils.js  render-doc-draw.js  runtime-overlay.js  runtime.js  session-pdf-toolbar.js  stroke-eraser.js  strokes-core.js  strokes-history.js
scripts/: ical-server.js  prepare-dist.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
