[package]
name = "boardcanvas"
version = "0.1.0"
description = "BoardCanvas desktop app"
authors = ["BoardCanvas"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.70"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "1.6", features = ["window-all"] }

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging", "Win32_Graphics_Gdi", "Win32_Graphics_Dwm"] }
webview2-com = "0.19.1"
windows = "0.39.0"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

